added CASValidateRedirectTicket Parameter to allow bypassing the 302 redirect after ticket validation.  This allows CAS enabled web services without the clients required to handle a 302 redirect.

--- a/README
+++ b/README
@@ -263,6 +263,12 @@ Default:	NULL
 Description:	The URL to use when performing a proxy validation.  This is currently
 		an unimplemented feature, so setting this will have no effect.
 
+Directive:	CASValidateRedirectTicket
+Default:	On
+Description:	When disabled, Off, don't send 302 redirect to the client.  Just allows
+		the request through with the ticket parameter.  For use with CAS enabled
+                web services.
+
 Directive: 	CASRootProxiedAs
 Default:	NULL
 Description:	This URL represents the URL that end users may see in the event that
