--- a/README
+++ b/README
@@ -91,6 +91,9 @@ NEW FEATURES AND FUNCTIONS IN THIS RELEASE
   CASCertificatePath directive, or switch to communicating with
   the CAS server over standard HTTP.
 
+* CASAllowWildcardCert has been removed, as this has been a no-op for
+  some time (libcurl handles all validation).
+
 ====================================================================
 BUG FIXES
 ====================================================================
@@ -227,14 +230,6 @@ Directive:	CASValidateDepth
 Default:	9
 Description:	This directive will set the maximum depth for chained certificate
 		validation.  The default (according to OpenSSL documentation) is 9.
-
-Directive:	CASAllowWildcardCert
-Default:	Off
-Description:	This directive determines whether a wildcard certificate can be trusted
-		to verify the CAS server.  For instance, if the CAS server presents a
-		certificate for *.example.com and the hostname portion of the CASValidateURL
-		is 'cas.login.example.com', this directive (if enabled) will accept that
-		certificate.
 
 Directive: 	CASCertificatePath
 Default:	/etc/ssl/certs/
