Changed old jasig email addresses to apereo

--- a/README
+++ b/README
@@ -436,6 +436,6 @@ We welcome your feedback, suggestions and contributions. Contact us
 via email if you have questions, feedback, code submissions,
 and bug reports.  To reach the development team, send an e-mail to:
 
-mod-auth-cas-dev [at] lists [dot] jasig [dot] org
+cas-user [at] apereo [dot] org
 
 ====================================================================
