--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ====================================================================
-MOD_AUTH_CAS 1.1 README
+MOD_AUTH_CAS 1.1-RC1 README
 ====================================================================
 Apache CAS Authentication Module
 
