Jasig/mod_auth_cas#100 Add Google Group link.

--- a/README
+++ b/README
@@ -390,4 +390,8 @@ and bug reports.  To reach the development team, send an e-mail to:
 
 cas-user [at] apereo [dot] org
 
+Google Group link:
+
+https://groups.google.com/a/apereo.org/forum/#!forum/cas-user
+
 ========================================================================
