--- a/README
+++ b/README
@@ -299,7 +299,7 @@ Description:	If enabled, the response from the CAS Server will be parsed for SAM
 Directive:	CASAllowSubAuth
 Default:	Off
 Description:	This directive determines whether subsequent CAS authentication
-		responses are allowed pass through, leaving the ticket parameter intact.
+		responses are allowed to pass through, leaving the ticket parameter intact.
 		Helps prevent infinite redirect loops when CAS protection is being used
 		at multiple levels.
 
