Updated AllowSubAuth directive description

--- a/README
+++ b/README
@@ -298,10 +298,9 @@ Description:	If enabled, the response from the CAS Server will be parsed for SAM
 
 Directive:	CASAllowSubAuth
 Default:	Off
-Description:	This directive determines whether subsequent CAS authentication
-		responses are allowed to pass through, leaving the ticket parameter intact.
-		Helps prevent infinite redirect loops when CAS protection is being used
-		at multiple levels.
+Description:	This directive leaves CAS ticket parameters intact when a valid
+		session cookie exists. This helps prevent infinite redirect loops when
+		CAS protection is being used at multiple levels.
 
 Valid Directory/.htaccess Directives
 ------------------------------------
