--- a/README
+++ b/README
@@ -312,6 +312,12 @@ Description:	mod_auth_cas will set the value of the attribute header (as describ
 		in CASAttributePrefix) to <attrvalue><CASAttributeDelimiter><attrvalue>
 		in the case of multiple attribute values.
 
+Directive:	CASPreserveTicket
+Default:	Off
+Description:	This directive leaves CAS ticket parameters intact when a valid
+		session cookie exists. This helps prevent infinite redirect loops when
+		CAS protection is being used at multiple levels.
+
 Valid Directory/.htaccess Directives
 ------------------------------------
 Directive:	CASScope
