--- a/README
+++ b/README
@@ -286,6 +286,15 @@ Description:	Set the optional 'HttpOnly' flag for cookies issues by mod_auth_cas
 		Set the HttpOnly flag as described in in RFC 6265.  This flag prevents the
 		mod_auth_cas cookies from being accessed by client side Javascript.
 
+Directive:	CASCookieSecure
+Default:	Auto
+Description:	Set the optional 'Secure' attribute for cookies issued by mod_auth_cas.
+		Set the Secure attribute as described in in RFC 6265. This flag prevents the
+		mod_auth_cas cookies from being sent over an unencrypted HTTP connection.
+		By default, mod_auth_cas sets the 'Secure' attribute depending on information about
+		the connection (the 'Auto' option). The options 'On' and 'Off' can be used to override
+		the automatic behaviour.
+
 Directive:	CASAuthoritative
 Default:	Off
 Description:	This directive determines whether an optional authorization directive
